--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="headerLogo">
+            Header Logo
+        </div>
+        <div class="headerLinks">
+            <a href="">header link one</a>
+            <a href="">header link two</a>
+            <a href="">header link three</a>
+        </div>
+    </div>
+    <div class="container1">
+        <div class="container1-1">
+            <div class="title">This website is awesome</div>
+            <div class="subtext"> This website has some subtext that goes here under the main title.
+                It's a smaller font and the color is a lower contrast.
+            </div>
+            <button class="signUp">Sign Up</button>
+        </div>
+        <div class="container1-2">
+            <img src="mrRobot.jpg" alt="Mr.Robot">
+        </div>
+
+    </div>
+    <div class="container2">
+        container
+    </div>
+    <div class="container3">
+        container
+
+    </div>
+    <div class="container4">
+        container
+
+    </div>  
+    <div class="footer">
+        footer
+    </div>
+
 </body>
 </html>
