Added images, worked on mid-page, added menu button and animation

--- a/index.html
+++ b/index.html
@@ -17,22 +17,47 @@
             <a href="">header link two</a>
             <a href="">header link three</a>
         </div>
+        <div class="menuHamburger">
+            <div class="menuHamburgerButton"></div>
+        </div>
     </div>
     <div class="container1">
-        <div class="container1-1">
+        <div class="mainInfo">
             <div class="title">This website is awesome</div>
             <div class="subtext"> This website has some subtext that goes here under the main title.
                 It's a smaller font and the color is a lower contrast.
             </div>
             <button class="signUp">Sign Up</button>
         </div>
-        <div class="container1-2">
-            <img src="mrRobot.jpg" alt="Mr.Robot">
+        <div class="mainImage">
+            <img id="mrRobotPic" src="mrRobot.jpg" alt="Mr.Robot">
         </div>
-
     </div>
     <div class="container2">
-        container
+        <h2>Some random information.</h2>
+        <div class="charactersContainer">
+            <div class="character">
+                <img src="elliot.jpg" alt="">
+                <h4>Elliot Anderson</h2>
+                <div class="characterInfo">this is some subtext under an illustration image.</div>
+            </div>
+            <div class="character">
+                <img src="mrrobotdad.jpg" alt="">
+                <h4>Mr. Robot</h2>    
+                <div class="characterInfo">this is some subtext under an illustration image.</div>
+            </div>
+            <div class="character">
+                <img src="Tyrell.jpg" alt="">
+                <h4>Tyrell Wellick</h2>  
+                <div class="characterInfo">this is some subtext under an illustration image.</div>
+            </div>
+            <div class="character">
+                <img src="whiterose.jpg" alt="">
+                <h4>White Rose</h2>  
+                <div class="characterInfo">this is some subtext under an illustration image.</div>
+            </div>
+
+        </div>
     </div>
     <div class="container3">
         container
@@ -45,6 +70,6 @@
     <div class="footer">
         footer
     </div>
-
+    <script src="main.js"></script>
 </body>
 </html>
