Completed bottom sections of page and changed color theme

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="subtext"> This website has some subtext that goes here under the main title.
                 It's a smaller font and the color is a lower contrast.
             </div>
-            <button class="signUp">Sign Up</button>
+            <button class="signUpBtn">Sign Up</button>
         </div>
         <div class="mainImage">
-            <img id="mrRobotPic" src="mrRobot.jpg" alt="Mr.Robot">
+            <img id="mrRobotPic" src="mrRobot3.jpg" alt="Mr.Robot">
         </div>
     </div>
     <div class="container2">
@@ -60,15 +60,24 @@
         </div>
     </div>
     <div class="container3">
-        container
-
+        <div class = "quote">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actuallt read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class = "quote2">
+            -Thor, God of Thunder
+        </div>  
     </div>
     <div class="container4">
-        container
-
+        <div class="signUp">
+            <div class="signUpFlyer">
+                <div class="signUpFlyer1">Call to action! It's time!</div>
+                <div class="signUpFlyer2">Sign up for our product by clicking that button over there!</div>
+            </div>
+            <button class="signUpBtn2">Sign Up</button>
+        </div>
     </div>  
     <div class="footer">
-        footer
+        Copyright @ Marco Santini Ayon 2022
     </div>
     <script src="main.js"></script>
 </body>
